--- a/Amsterdam.html
+++ b/Amsterdam.html
@@ -59,7 +59,7 @@ button:hover {
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/actuarial-science/actuarial-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Actuarial Science</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/actuarial-science/actuarial-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">精算学</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@ button:hover {
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/business-administration/business-administration.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Business Administration</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/business-administration/business-administration.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">工商管理</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/business-administration/application-and-admission/international-prior-education/international-prior-education.html'">→</button>
@@ -79,7 +79,7 @@ button:hover {
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/business-analytics/business-analytics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Business Analytics</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/business-analytics/business-analytics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">商业分析</button>
     </div> 
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/business-analytics/application-and-admission/international-prior-education/international-prior-education.html'">→</button>
@@ -90,7 +90,7 @@ button:hover {
   <!-- 第四组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/econometrics-and-data-science/econometrics-and-data-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Econometrics and Data Science</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/econometrics-and-data-science/econometrics-and-data-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">计量经济学和数据科学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/econometrics-and-data-science/application-and-admission/international-prior-education/entry-requirements.html'">→</button>
@@ -101,7 +101,7 @@ button:hover {
   <!-- 第5组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/economics--business-economics/economics--business-economics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Economics and Business Economics</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/economics--business-economics/economics--business-economics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">经济学和商业经济学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/economics--business-economics/application-and-admission/international-prior-education/entry-requirements.html'">→</button>
@@ -112,7 +112,7 @@ button:hover {
   <!-- 第6组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/politics-psychology-law-and-economics/politics-psychology-law-and-economics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Politics, Psychology, Law and Economics (PPLE)</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/politics-psychology-law-and-economics/politics-psychology-law-and-economics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">政治、心理、法律和经济学（PPLE）</button>
     </div>
     <div>
       <button onclick="window.location.href='https://pple.uva.nl/how-to-apply/entry-requirements/entry-requirements.html'">→</button>
@@ -122,7 +122,7 @@ button:hover {
   <!-- 第7组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/ancient-studies/ancient-studies.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Ancient Studies</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/ancient-studies/ancient-studies.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">古代研究</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/ancient-studies/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg#1-Check-the-deadlines'">→</button>
@@ -132,7 +132,7 @@ button:hover {
   <!-- 第8组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/archaeology/index.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Archaeology</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/archaeology/index.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">考古学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/archaeology/application-and-admission/application-and-admission.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">→</button>
@@ -142,7 +142,7 @@ button:hover {
   <!-- 第9组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/english-language-and-culture/english-language-and-culture.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">English Language and Culture</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/english-language-and-culture/english-language-and-culture.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">英语语言与文化</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/english-language-and-culture/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">→</button>
@@ -152,7 +152,7 @@ button:hover {
   <!-- 第10组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/european-studies/european-studies.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">European Studies</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/european-studies/european-studies.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">欧洲研究</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/european-studies/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg#2-Check-the-entry-requirements'">→</button>
@@ -162,7 +162,7 @@ button:hover {
   <!-- 第11组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/global-arts-culture-and-politics/global-arts-culture-and-politics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Global Arts, Culture and Politics</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/global-arts-culture-and-politics/global-arts-culture-and-politics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">全球艺术、文化与政治</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/shared-content/programmas/en/bachelors/global-arts-culture-and-politics/application-and-admission/international-prior-education/international-prior-education.html'">→</button>
@@ -172,7 +172,7 @@ button:hover {
   <!-- 第12组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/linguistics/linguistics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Linguistics</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/linguistics/linguistics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">语言学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/linguistics/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">→</button>
@@ -182,7 +182,7 @@ button:hover {
   <!-- 第13组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/literary-and-cultural-analysis-literary-studies/literary-studies-literary-and-cultural-analysis.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Literary and Cultural Analysis (Literary Studies)</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/literary-and-cultural-analysis-literary-studies/literary-studies-literary-and-cultural-analysis.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">文学与文化分析（文学研究）</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/literary-and-cultural-analysis-literary-studies/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">→</button>
@@ -192,7 +192,7 @@ button:hover {
   <!-- 第14组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/media-and-culture/media-and-culture.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Media and Culture</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/media-and-culture/media-and-culture.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">传媒与文化</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/media-and-culture/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">→</button>
@@ -202,7 +202,7 @@ button:hover {
   <!-- 第15组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/media-and-information/media-and-information.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Media and Information</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/media-and-information/media-and-information.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">媒体与信息</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/media-and-information/application-and-admission/international-prior-education/international-prior-education.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">→</button>
@@ -212,7 +212,7 @@ button:hover {
   <!-- 第16组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/sign-language-linguistics-linguistics/sign-language-linguistics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Sign Language Linguistics (Linguistics)</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/sign-language-linguistics-linguistics/sign-language-linguistics.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">手语语言学（语言学）</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/shared-content/programmas/en/bachelors/sign-language-linguistics-linguistics/application-and-admission/international-prior-education/international-prior-education.html'">→</button>
@@ -222,7 +222,7 @@ button:hover {
   <!-- 第17组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/communication-science/communication-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Communication Science</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/communication-science/communication-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">传播学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/education/admissions/bachelors/applying-for-a-degree-programme.html#4-Check-entry-requirements-language-proficiency'">→</button>
@@ -232,7 +232,7 @@ button:hover {
   <!-- 第18组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/computational-social-science/computational-social-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Computational Social Science</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/computational-social-science/computational-social-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">计算社会科学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/education/admissions/bachelors/applying-for-a-degree-programme.html'">→</button>
@@ -242,7 +242,7 @@ button:hover {
   <!-- 第19组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/cultural-anthropology-and-development-sociology/cultural-anthropology-and-development-sociology.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Cultural Anthropology and Development Sociology</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/cultural-anthropology-and-development-sociology/cultural-anthropology-and-development-sociology.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">文化人类学与发展社会学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/education/admissions/bachelors/applying-for-a-degree-programme.html'">→</button>
@@ -252,7 +252,7 @@ button:hover {
   <!-- 第20组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/human-geography-and-planning/human-geography-and-planning.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Human Geography and Planning</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/human-geography-and-planning/human-geography-and-planning.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">人文地理与规划</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/education/admissions/bachelors/applying-for-a-degree-programme.html'">→</button>
@@ -262,7 +262,7 @@ button:hover {
   <!-- 第21组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/political-science/political-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Political Science</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/political-science/political-science.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">政治学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/shared-content/programmas/en/bachelors/political-science/application-and-admission/international-prior/application-and-admission.html#2-Check-entry-requirements'">→</button>
@@ -272,7 +272,7 @@ button:hover {
   <!-- 第22组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/psychology/psychology.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Psychology</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/psychology/psychology.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">心理学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/shared-content/programmas/en/bachelors/psychology/application-and-admission/international-prior-education/application-and-admission.html'">→</button>
@@ -282,7 +282,7 @@ button:hover {
   <!-- 第23组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/sociology/sociology.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Sociology</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/sociology/sociology.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">社会学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/education/admissions/bachelors/applying-for-a-degree-programme.html'">→</button>
@@ -292,7 +292,7 @@ button:hover {
   <!-- 第24组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/amsterdam-university-college/amsterdam-university-college.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">Liberal Arts and Sciences (Amsterdam University College)</button>
+      <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/amsterdam-university-college/amsterdam-university-college.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg'">文理学院（阿姆斯特丹大学学院）</button>
     </div>
     <div>
       <button onclick="window.location.href='https://www.uva.nl/en/programmes/bachelors/amsterdam-university-college/application--admission/application--admission.html?origin=0UW%2FNlzHRVCfgfmL3cdmVg#1-Check-the-application-deadlines'">→</button>
