--- a/Aarhus.html
+++ b/Aarhus.html
@@ -59,7 +59,7 @@
     <!-- 第一组按钮：项目主页和申请要求 -->
     <div>
       <p>项目主页</p>
-      <button onclick="window.location.href='https://bachelor.au.dk/en/cognitivescience/'">Cognitive Science (EN)</button>
+      <button onclick="window.location.href='https://bachelor.au.dk/en/cognitivescience/'">认知科学</button>
     </div>
     <div>
       <p>申请要求</p>
@@ -70,7 +70,7 @@
   <!-- 第二组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://bachelor.au.dk/en/computerscience'">Computer Science (EN)</button>
+      <button onclick="window.location.href='https://bachelor.au.dk/en/computerscience'">计算机科学</button>
     </div>
     <div>
       <button onclick="window.location.href='https://bachelor.au.dk/en/computerscience'">→</button>
@@ -79,7 +79,7 @@
   <!-- 第三组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://bachelor.au.dk/en/datascience'">Data Science (EN)</button>
+      <button onclick="window.location.href='https://bachelor.au.dk/en/datascience'">数据科学 </button>
     </div> 
     <div>
       <button onclick="window.location.href='https://bachelor.au.dk/en/datascience'">→</button>
@@ -90,7 +90,7 @@
   <!-- 第四组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://bachelor.au.dk/en/economics-and-business-administration'">Economics and Business Administration, BSc (EN)</button>
+      <button onclick="window.location.href='https://bachelor.au.dk/en/economics-and-business-administration'">经济学与工商管理</button>
     </div>
     <div>
       <button onclick="window.location.href='https://bachelor.au.dk/en/economics-and-business-administration'">→</button>
@@ -101,7 +101,7 @@
   <!-- 第5组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://bachelor.au.dk/en/economics-and-business-administration-auhe/'">Economics and Business Administration, BSc (EN) (Herning)</button>
+      <button onclick="window.location.href='https://bachelor.au.dk/en/economics-and-business-administration-auhe/'">经济学与工商管（赫宁）</button>
     </div>
     <div>
       <button onclick="window.location.href='https://bachelor.au.dk/en/economics-and-business-administration-auhe/'">→</button>
@@ -112,7 +112,7 @@
   <!-- 第6组按钮：没有文字 -->
   <div class="button-container">
     <div>
-      <button onclick="window.location.href='https://bachelor.au.dk/en/itproductdevelopment'">IT Product Development (EN)</button>
+      <button onclick="window.location.href='https://bachelor.au.dk/en/itproductdevelopment'">信息技术产品开发</button>
     </div>
     <div>
       <button onclick="window.location.href='https://bachelor.au.dk/en/itproductdevelopment'">→</button>
